Changed parameter type

--- a/templates/app-service-plan.json
+++ b/templates/app-service-plan.json
@@ -33,6 +33,7 @@
     },
     "variables": {
         "name": {
+            "type":"string",
             "defaultValue":"[concat(parameters('name'),'-app-service-plan')]"
         }
     },
