Changed parameter type

--- a/templates/app-service-plan.json
+++ b/templates/app-service-plan.json
@@ -32,10 +32,7 @@
         }
     },
     "variables": {
-        "name": {
-            "type":"string",
-            "defaultValue":"[concat(parameters('name'),'-app-service-plan')]"
-        }
+        "name": "[tolower(concat(parameters('name'),'-app-service-plan'))]"
     },
 
     "resources": [
